fix: prevent logo vertical squash with height auto

--- a/front/src/app/pages/home/home.component.scss
+++ b/front/src/app/pages/home/home.component.scss
@@ -16,6 +16,7 @@
 
 .logo {
   width: 550px;
+  height: auto;
 
   @media (max-width: 768px) {
     width: 340px;
